# lsd_slam_wo_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  call_scheme.txt
apps/slam/: CMakeLists.txt  DebugOutput3DWrapper.cpp  main_on_images.cc  sample_app.cc
cmake/: LsdSlamDependencies.cmake  LsdSlamUtil.cmake
lib/: CMakeLists.txt  SlamSystem.cpp  SlamSystem.h
lib/App/: InputThread.h
lib/DataStructures/: Frame.cpp  Frame.h  FrameData.h  FrameMemory.cpp  FrameMemory.h  FramePoseStruct.cpp  FramePoseStruct.h  KeyFrame.cpp
lib/DepthEstimation/: DepthMap.cpp  DepthMap.h  DepthMapDebugImages.cpp  DepthMapDebugImages.h  LineStereoResult.h
lib/GlobalMapping/: FabMap.cpp  KeyFrameGraph.cpp  KeyFrameGraph.h  TrackableKeyFrameSearch.cpp  TrackableKeyFrameSearch.h  g2oTypeSim3Sophus.cpp  g2oTypeSim3Sophus.h
lib/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
lib/IOWrapper/mesh/: MeshOutputWrapper.cpp  MeshOutputWrapper.h
lib/PlyOutputWrapper/: CMakeLists.txt
lib/PlyOutputWrapper/include/PlyOutputWrapper/: MeshOutputWrapper.h
lib/PlyOutputWrapper/src/: MeshOutputWrapper.cpp
lib/SlamSystem/: ConstraintSearchThread.cpp  ConstraintSearchThread.h  MappingThread.cpp  MappingThread.h  OptimizationThread.cpp  OptimizationThread.h  TrackingThread.cpp  TrackingThread.h
lib/Tracking/: LGSX.h  Relocalizer.cpp  Relocalizer.h  SE3Tracker.cpp  SE3Tracker.h  SE3TrackerDebugImages.cpp  SE3TrackerDebugImages.h  Sim3Tracker.cpp  Sim3Tracker.h  TrackingReference.h
lib/util/: Configuration.cpp  Configuration.h  DenseDepthTrackerSettings.h  IndexThreadReduce.h  SE3TrackerSignals.h  SophusUtil.cpp  SophusUtil.h  ThreadMutexObject.h  globalFuncs.cpp  globalFuncs.h  settings.cpp  settings.h  validators.cpp  validators.hpp
lsd_slam/: CMakeLists.txt  live_slam_wrapper.cc  slam_system.cc  slam_system.h
lsd_slam/depth_estimation/: depth_map.cc  depth_map.h
lsd_slam/global_mapping/: fab_map.cc  fab_map.h  g2o_type_sim3_sophus.cc  g2o_type_sim3_sophus.h  key_frame_graph.cc
lsd_slam/io_wrapper/: ImageDisplay_OpenCV.cc  OpenCVImageStreamThread.cpp  OpenCVImageStreamThread.h
lsd_slam/tracking/: relocalizer.cc  relocalizer.h
lsd_slam/util/: global_funcs.cc  index_thread_reduce.h  sophus_util.h  undistorter.cc  undistorter.h
lsd_slam_core/: CMakeLists.txt
lsd_slam_core/src/: SlamSystem.cpp
lsd_slam_core/src/DataStructures/: Frame.h
lsd_slam_core/src/DepthEstimation/: DepthMap.cpp
lsd_slam_core/src/GlobalMapping/: FabMap.cpp  KeyFrameGraph.h  g2oTypeSim3Sophus.h
lsd_slam_core/src/IOWrapper/: ImageDisplay.h
lsd_slam_core/src/util/: globalFuncs.cpp
ocean_api_depends/g3logg/example/: main_fatal_choice.cpp  main_sigsegv.cpp
ocean_api_depends/libactiveobject/: CMakeLists.txt
ocean_api_depends/libactiveobject/lib/: CMakeLists.txt
ocean_api_depends/libbinlogger/: CMakeLists.txt
ocean_api_depends/libbinlogger/include/logger/: LogWriter.h
ocean_api_depends/libbinlogger/lib/: CMakeLists.txt  LogReader.cpp
ocean_api_depends/libg3logger/: CMakeLists.txt
ocean_api_depends/libg3logger/lib/: CMakeLists.txt
ocean_api_depends/libvideoio/: CMakeLists.txt
ocean_api_depends/libvideoio-types/: CMakeLists.txt
ocean_api_depends/libvideoio/include/libvideoio/: FileUtils.h  ImageOutput.h  ImageSource.h  Undistorter.h  VideoOutput.h
ocean_api_depends/libvideoio/lib/: CMakeLists.txt
ocean_api_depends/libvideoio/lib/undistorter/: OpenCVUndistorter.cpp  OpenCVUndistorterFactory.cpp  PTAMUndistorterFactory.cpp  PhotoscanXMLUndistorterFactory.cpp  ROSUndistorterFactory.cpp  Undistorter.cpp  UndistorterFactory.cpp
ocean_api_depends/libvideoio/lib/util/: FileUtils.cpp
ocean_api_depends/libvideoio/tools/: Recorder.cpp  Undistort.cpp
python/: track_to.py
tools/: CMakeLists.txt  LSD.cpp
