cmake_minimum_required(VERSION 3.18.0 )
project(lsd_slam_root VERSION 0.1.0)
#option(G2O_FOLDER "/usr/local/goa/lib/cmake/g2o/")
#list(APPEND CMAKE_MODULE_PATH "${G20_FOLDER}")
#include("/usr/local/goa/lib/cmake/g2o/g2oConfig.cmake")
find_package(g2o REQUIRED)
message("g2o folders ${}")
add_subdirectory(lsd_slam_core)
#add_subdirectory(lsd_slam_viewer)
